@@ -2,6 +2,8 @@ EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
 ==06/16/2010==
 gaeorn: fixed possible bug with unlocking cursed containers in LDoN
+Trevius: SoF/SoD/Live - Corrected the item structures to allow summonedflag setting to show on items.
+Trevius: SoD/Live - Identified Clairvoyance and added it to load from the DB to be shown on items.
 
 ==06/15/2010==
 Secrets: Characters with HPs higher than 30k will no longer be set back to 30k current health when zoning.
